# ktsuss

./: .gitignore  COPYING  CREDITS  Changelog  LICENSE  Makefile.am  README  README.md  configure.ac
pixmaps/: Makefile.am
src/: Makefile.am  errors.h  ktsuss.c  su_backend.c  su_backend.h  sudo_backend.c  sudo_backend.h
